rocon_app_utilities/tests/test_rapps/rapp/invalid_classification/invalid_implementation_child1.rapp
compatibility: rocon:/*
launch: foo.launch
#parent_name: rocon_apps/talker.rapp
